docs: fixed poor contrast

--- a/doc/_sphinx/theme/flames.css
+++ b/doc/_sphinx/theme/flames.css
@@ -533,7 +533,7 @@ div.document::after { /* clearfix */
 
 
 div.copyright {
-  color: #000000;
+  color: #757575;
   font-size: 12px;
   margin-top: 3px;
   opacity: 0.5;
